# tree-sitter-lyra

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  fib.lyra  go.mod  grammar.js  package.json  pyproject.toml  scratch.jwl  setup.py  todo.md  tree-sitter.json
bindings/c/: tree-sitter-jewel-parser.pc.in  tree-sitter-lyra-parser.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
grammar/expressions/: math_expressions.js
grammar/literals/: numbers.js  structs.js
grammar/types/: structs.js
grammer/: literals.js  math_expressions.js  statements.js  types.js
grammer/literals/: numbers.js
grammer/types/: types.js
include/: comments.js
include/control-flow/: match.js
include/destructuring/: destructuring.js
include/expressions/: array_comprehension.js  boolean.js  expressions.js  index.js  math.js  math_expressions.js  postfix.js  range.js
include/functions/: anonymous.js  arguments_list.js  declaration.js  definition.js  function_calls.js  function_declarations.js  index.js
include/literals/: array.js  array_literal.js  boolean.js  char.js  index.js  literals.js  map.js  numbers.js  regex.js  string.js  struct.js  struct_literal.js  tuple.js  tuple_literal.js
include/modules/: index.js
include/patterns/: index.js  pattern_matching.js  patterns.js
include/statements/: arena.js  assignments.js  index.js  statements.js
include/types/: alias_type.js  allocation.js  array_type.js  constrained_type.js  data_type.js  data_types.js  generic_type.js  (+10 more)
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
(+74 files in other folders)
